# pico-usb-midi-filter

./: .gitmodules  CMakeLists.txt  README.md  keylab_essential_mc_filter.c  midi_app.c  midi_filter.h  midi_mc_fader_pickup.c  midi_mc_fader_pickup.h  tusb_config.h  usb_descriptors.c  usb_descriptors.h
tinyusb_patches/: 0001-Allow-defining-CFG_TUD_ENDPOINT0_SIZE-as-a-function.patch
